Messages and translations

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,13 @@ Change Log
 ==========
 
 
+## 0.1.1
+
+Changes:
+
+* Messages and translations
+
+
 ## 0.1.0
 
 **Nautilus Launch** has been published.
