--- a/po/es.po
+++ b/po/es.po
@@ -1,4 +1,4 @@
-# Italian translations for PACKAGE package.
+# Spanish translations for PACKAGE package.
 # Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FULL NAME <EMAIL@ADDRESS>, 2020.
@@ -10,8 +10,8 @@ msgstr ""
 "POT-Creation-Date: 2020-10-09 13:22+0100\n"
 "PO-Revision-Date: 2020-10-09 13:22+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Italian <tp@lists.linux.it>\n"
-"Language: it\n"
+"Language-Team: Spanish <es@tp.org.es>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,32 +19,32 @@ msgstr ""
 
 #: ../src/nautilus-launch.c:93
 msgid "Error retrieving file's path"
-msgstr "Errore nel recuperare la posizione del file"
+msgstr "Error al recuperar la posición del archivo"
 
 #: ../src/nautilus-launch.c:111
 msgid "Launcher has become invalid"
-msgstr "Il lanciatore non è più valido"
+msgstr "El lanzador ya no es válido"
 
 #: ../src/nautilus-launch.c:150
 msgid "Error retrieving current working directory"
-msgstr "Errore nel recuperare la directory di lavoro corrente"
+msgstr "Error al recuperar el directorio de trabajo actual"
 
 #: ../src/nautilus-launch.c:237
 msgid "Error retrieving launcher's path"
-msgstr "Errore nel recuperare la posizione del lanciatore"
+msgstr "Error al recuperar la posición del lanzador"
 
 #: ../src/nautilus-launch.c:294
 msgid "Launch all"
-msgstr "Lancia tutto"
+msgstr "Lanzar todo"
 
 #: ../src/nautilus-launch.c:295
 msgid "Launch all the selected applications"
-msgstr "Lancia tutte le applicazioni selezionate"
+msgstr "Lanzar todas las aplicaciones seleccionadas"
 
 #: ../src/nautilus-launch.c:301
 msgid "Launch"
-msgstr "Lancia"
+msgstr "Lanzar"
 
 #: ../src/nautilus-launch.c:302
 msgid "Launch the selected application"
-msgstr "Lancia l'applicazione selezionata"
+msgstr "Lanzar la aplicación seleccionada"
