--- a/po/la.po
+++ b/po/la.po
@@ -1,7 +1,7 @@
-# Italian translations for PACKAGE package.
+# Latin translations for PACKAGE package.
 # Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FULL NAME <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
@@ -10,41 +10,41 @@ msgstr ""
 "POT-Creation-Date: 2020-10-09 13:22+0100\n"
 "PO-Revision-Date: 2020-10-09 13:22+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Italian <tp@lists.linux.it>\n"
-"Language: it\n"
+"Language-Team: Latin\n"
+"Language: la\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=20; plural=(n != 1);\n"
 
 #: ../src/nautilus-launch.c:93
 msgid "Error retrieving file's path"
-msgstr "Errore nel recuperare la posizione del file"
+msgstr "Error per locum fasciculi recipiendum"
 
 #: ../src/nautilus-launch.c:111
 msgid "Launcher has become invalid"
-msgstr "Il lanciatore non è più valido"
+msgstr "Pultrum illegitimum factus est"
 
 #: ../src/nautilus-launch.c:150
 msgid "Error retrieving current working directory"
-msgstr "Errore nel recuperare la directory di lavoro corrente"
+msgstr "Error per plicum operis recipiendum"
 
 #: ../src/nautilus-launch.c:237
 msgid "Error retrieving launcher's path"
-msgstr "Errore nel recuperare la posizione del lanciatore"
+msgstr "Error per locum pultri recipiendum"
 
 #: ../src/nautilus-launch.c:294
 msgid "Launch all"
-msgstr "Lancia tutto"
+msgstr "Pellere omnia"
 
 #: ../src/nautilus-launch.c:295
 msgid "Launch all the selected applications"
-msgstr "Lancia tutte le applicazioni selezionate"
+msgstr "Pellere omnia selecta programmata"
 
 #: ../src/nautilus-launch.c:301
 msgid "Launch"
-msgstr "Lancia"
+msgstr "Pellere"
 
 #: ../src/nautilus-launch.c:302
 msgid "Launch the selected application"
-msgstr "Lancia l'applicazione selezionata"
+msgstr "Pellere selectum programma"
