--- a/po/es.po
+++ b/po/es.po
@@ -1,14 +1,15 @@
-# Spanish translations for PACKAGE package.
-# Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FULL NAME <EMAIL@ADDRESS>, 2020.
+# Spanish translations for nautilus-launch package.
+# Copyright (C) 2020 <madmurphy333@gmail.com>
+# This file is distributed under the same license as the nautilus-launch
+# package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-26 21:21+0200\n"
-"PO-Revision-Date: 2021-04-26 21:21+0200\n"
+"Project-Id-Version: 1.0.1\n"
+"Report-Msgid-Bugs-To: <madmurphy333@gmail.com>\n"
+"POT-Creation-Date: 2021-05-02 23:40+0200\n"
+"PO-Revision-Date: 2021-05-02 23:40+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Spanish <es@tp.org.es>\n"
 "Language: es\n"
@@ -17,29 +18,25 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ../src/nautilus-launch.c:96
+#: ../src/nautilus-launch.c:104
 msgid "Error retrieving file's path"
 msgstr "Error al recuperar la posición del archivo"
 
-#: ../src/nautilus-launch.c:114
+#: ../src/nautilus-launch.c:126
 msgid "Launcher has become invalid"
 msgstr "El lanzador ya no es válido"
 
-#: ../src/nautilus-launch.c:153
+#: ../src/nautilus-launch.c:171
 msgid "Error retrieving current working directory"
 msgstr "Error al recuperar el directorio de trabajo actual"
 
-#: ../src/nautilus-launch.c:240
-msgid "Error retrieving launcher's path"
-msgstr "Error al recuperar la posición del lanzador"
-
-#: ../src/nautilus-launch.c:296
+#: ../src/nautilus-launch.c:304
 msgid "_Launch"
 msgid_plural "_Launch all"
 msgstr[0] "_Lanzar"
 msgstr[1] "_Lanzar todo"
 
-#: ../src/nautilus-launch.c:297
+#: ../src/nautilus-launch.c:307
 msgid "Launch the selected application"
 msgid_plural "Launch all the selected applications"
 msgstr[0] "Lanzar la aplicación seleccionada"
