--- a/ChangeLog
+++ b/ChangeLog
@@ -2,14 +2,24 @@ Change Log
 ==========
 
 
-## 1.0.2
+## 1.0.3 (2021-05-24)
+
+Changes:
+
+* Use of `fprintf()` for logging has been dropped in favor of GLib's
+  `g_message()`
+* A small bug in the build system that caused `make distcheck` not to function
+  properly has been fixed
+
+
+## 1.0.2 (2021-05-06)
 
 Changes:
 
 * Code review
 
 
-## 1.0.1
+## 1.0.1 (2021-05-03)
 
 Changes:
 
@@ -18,7 +28,7 @@ Changes:
   https://gitlab.gnome.org/madmurphy/nautilus-launch
 
 
-## 1.0.0
+## 1.0.0 (2021-04-28)
 
 Changes:
 
@@ -26,21 +36,21 @@ Changes:
 * Package review and fix this as the first stable major release (1.0.0)
 
 
-## 0.1.2
+## 0.1.2 (2020-10-20)
 
 Changes:
 
 * Use `--disable-static` as the default `configure` option
 
 
-## 0.1.1
+## 0.1.1 (2020-10-09)
 
 Changes:
 
 * Messages and translations
 
 
-## 0.1.0
+## 0.1.0 (2020-10-08)
 
 **Nautilus Launch** has been published.
 
