--- a/po/it.po
+++ b/po/it.po
@@ -1,12 +1,12 @@
-# Italian translations for nautilus-launch package.
+# Italian translations for Nautilus Launch.
 # Copyright (C) 2020 <madmurphy333@gmail.com>
-# This file is distributed under the same license as the nautilus-launch
+# This file is distributed under the same license as the Nautilus Launch
 # package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0.4\n"
+"Project-Id-Version: nautilus-launch 1.0.6\n"
 "Report-Msgid-Bugs-To: madmurphy333@gmail.com\n"
 "POT-Creation-Date: 2021-05-27 00:36+0200\n"
 "PO-Revision-Date: 2021-05-24 13:44+0200\n"
