--- a/po/nl.po
+++ b/po/nl.po
@@ -1,22 +1,23 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR madmurphy333@gmail.com
-# This file is distributed under the same license as the nautilus-launch package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Dutch translations for Nautilus Launch.
+# Copyright (C) 2021 madmurphy333@gmail.com
+# This file is distributed under the same license as the Nautilus Launch
+# package.
+# Heimen Stoffels <vistausss AT fastmail DOT com>, 2021.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus-launch 1.0.5\n"
+"Project-Id-Version: nautilus-launch 1.0.6\n"
 "Report-Msgid-Bugs-To: madmurphy333@gmail.com\n"
 "POT-Creation-Date: 2021-09-20 14:29+0200\n"
 "PO-Revision-Date: 2021-09-20 14:40+0200\n"
+"Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: \n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 3.0\n"
-"Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
-"Language: nl\n"
 
 #: src/nautilus-launch.c:113
 msgid "Error retrieving file's path"
