--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,13 @@ Change Log
 ==========
 
 
+## 2.0.0 (2022-10-28)
+
+Changes:
+
+* The extension has been ported to `libnautilus-extension-4`
+
+
 ## 1.0.6 (2021-09-21)
 
 Changes:
