--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@ NEWS
 ====
 
 
+## 2.0.0
+
+* The extension has been ported to `libnautilus-extension-4`
+
+
 ## 1.0.4
 
 * Internationalization does not depend on **XDG intltool** anymore, but only on
